<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.design.button.MaterialButton
        android:id="@+id/backdrop_settings"
        style="@style/Widget.Fire.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fir_settings" />

    <android.support.design.button.MaterialButton
        android:id="@+id/backdrop_about"
        style="@style/Widget.Fire.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fir_about" />

    <android.support.design.button.MaterialButton
        android:id="@+id/backdrop_messages"
        style="@style/Widget.Fire.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fir_chats" />


    <View
        android:layout_width="56dp"
        android:layout_height="1dp"
        android:layout_margin="16dp"
        android:background="?android:attr/textColorPrimary" />

    <android.support.design.button.MaterialButton
        style="@style/Widget.Fire.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fir_perfil_label" />

</merge>