<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/loginPageBackgroundColor"
    tools:context=".LoginFragment">

    <LinearLayout
        android:id="@+id/fir_login_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:padding="24dp"
        android:paddingTop="16dp">

        <ImageView
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="48dp"
            android:layout_marginBottom="16dp"
            android:tint="?android:attr/textColorPrimary"
            app:srcCompat="@drawable/fir_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="50dp"
            android:text="@string/fir_app_name"
            android:textAppearance="@style/TextAppearance.Fire.Title"/>




        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fir_about_1"
            android:paddingTop="30dp"
            android:layout_gravity="left"
            style="@style/TextAppearance.Fire.Subtitle1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fir_about_2"
            android:paddingTop="60dp"
            android:layout_gravity="left"
            style="@style/TextAppearance.Fire.Subtitle1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fir_about_3"
            android:paddingTop="60dp"
            android:layout_gravity="left"
            style="@style/TextAppearance.Fire.Subtitle1"/>
    </LinearLayout>
</ScrollView>
