<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/loginPageBackgroundColor"
    tools:context=".LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:padding="24dp"
        android:paddingTop="16dp">

        <ImageView
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="48dp"
            android:layout_marginBottom="16dp"
            android:tint="?android:attr/textColorPrimary"
            app:srcCompat="@drawable/fir_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp"
            android:text="@string/fir_app_name"
            android:textAppearance="@style/TextAppearance.Fire.Title"/>

        <!-- Snippet from "Add text fields" section goes here. -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="35dp"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                style="@style/TextAppearance.Fire.Subtitle"
                android:layout_height="wrap_content"
                android:text="@string/fir_login_with"/>

        </LinearLayout>
        <!-- Snippet from "Add buttons" section goes here. -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.button.MaterialButton
                android:id="@+id/btFire"
                style="@style/Widget.Fire.Button.OutlinedButton"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_marginBottom="10dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:text="@string/fir_login_fire_acc" />

            <com.google.android.gms.common.SignInButton
                android:id="@+id/btGoogle"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_marginBottom="10dp"
                />



            <android.support.design.button.MaterialButton
                android:id="@+id/btTwitter"
                style="@style/Widget.Fire.Button.OutlinedButton"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_marginBottom="10dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:text="@string/fir_login_twitter_acc" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>